UV/Image Editor's Zoom rate is not properly calculated. #20800

Closed
opened 2010-01-24 16:52:29 +01:00 by Masahito Takahashi · 5 comments

%%%I noticed UV/Image Editor's Image size is a little smaller than grid size.
I think it is because zoomx, zoomy value is not calculated properly.
Please check this patch.%%%

%%%I noticed UV/Image Editor's Image size is a little smaller than grid size. I think it is because zoomx, zoomy value is not calculated properly. Please check this patch.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I added some image for explanation.%%%

%%%I added some image for explanation.%%%

%%%And a little more information.

xoomx, xoomy is calculated in ED_space_image_zoom() like this way.

*zoomx= (float)(ar->winrct.xmax - ar->winrct.xmin)/(float)((ar->v2d.cur.xmax - ar->v2d.cur.xmin)*width);
*zoomy= (float)(ar->winrct.ymax - ar->winrct.ymin)/(float)((ar->v2d.cur.ymax - ar->v2d.cur.ymin)*height);

And ar->v2d.cur.xmax, ar->v2d.cur.ymax is calculated in image_main_area_set_view2d() like this.

ar->v2d.cur.xmax= ar->v2d.cur.xmin + ((float)winx/sima->zoom);
ar->v2d.cur.ymax= ar->v2d.cur.ymin + ((float)winy/sima->zoom);

And winx, winy is calculated like this way.
winx= ar->winrct.xmax - ar->winrct.xmin + 1;
winy= ar->winrct.ymax - ar->winrct.ymin + 1;

So, I think calculation of zoomx, zoomy need "+ 1".%%%

%%%And a little more information. xoomx, xoomy is calculated in ED_space_image_zoom() like this way. *zoomx= (float)(ar->winrct.xmax - ar->winrct.xmin)/(float)((ar->v2d.cur.xmax - ar->v2d.cur.xmin)*width); *zoomy= (float)(ar->winrct.ymax - ar->winrct.ymin)/(float)((ar->v2d.cur.ymax - ar->v2d.cur.ymin)*height); And ar->v2d.cur.xmax, ar->v2d.cur.ymax is calculated in image_main_area_set_view2d() like this. ar->v2d.cur.xmax= ar->v2d.cur.xmin + ((float)winx/sima->zoom); ar->v2d.cur.ymax= ar->v2d.cur.ymin + ((float)winy/sima->zoom); And winx, winy is calculated like this way. winx= ar->winrct.xmax - ar->winrct.xmin + 1; winy= ar->winrct.ymax - ar->winrct.ymin + 1; So, I think calculation of zoomx, zoomy need "+ 1".%%%

%%%Thanks for the patch, committed to svn.%%%

%%%Thanks for the patch, committed to svn.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#20800
No description provided.