Patch #20800: uv editor zoom rate not properly calculated, uv's were drawn slightly offset from the image. Patch by Masahito Takahashi, thanks!